2000-03-18  Yoshiki Hayashi  <yoshiki@xemacs.org>

	* mime-view.el (mime-display-gzipped): Temporaly hack for FSF Emacs
	until new FLIM is released.

2000-03-16  Yoshiki Hayashi  <yoshiki@xemacs.org>

	* mime-view.el (mime-display-gzipped): Make it FSF Emacs friendly.

2000-03-14  Yoshiki Hayashi  <yoshiki@xemacs.org>

	* mime-view.el (mime-display-gzipped): Remove arguments.
	autodetect coding system.

2000-03-01  Yoshiki Hayashi  <yoshiki@xemacs.org>

	* mime-image.el (mime-display-image): Don't wait for redisplay.

2000-02-23   Daiki Ueno  <ueno@ueda.info.waseda.ac.jp>

	* mime-image.el
	(mime-image-normalize-xbm-buffer): New inline function.
	(mime-image-create) [XEmacs || Emacs21]: Use it for XBM data.
	(mime-display-image): Don't create temporary file.

2000-02-24  Mito  <mit@nines.nec.co.jp>

	* mime-edit.el (mime-edit-normalize-body): Fix number of arguments
	against enriched-encode.

2000-02-27  Yoshiki Hayashi  <yoshiki@xemacs.org>

	* mime-view.el: Don't show a child entity of
	message/external-body.

2000-02-21   Daiki Ueno  <ueno@ueda.info.waseda.ac.jp>

	* pgg.el (pgg-temp-buffer-show-function): Use
	`shrink-window-if-larger-than-buffer'.

	* pgg-gpg.el (pgg-gpg-process-region): Fix cleanup form.

	* pgg-pgp.el (pgg-pgp-process-region): Ditto.

	* pgg-pgp5.el (pgg-pgp5-process-region): Ditto.

	* semi-setup.el (mime-setup-enable-inline-image): Remove checking
	of bitmap-mule; use `eval-after-load' instead of
	`call-after-loaded' to require `mime-image'.

	* mime-image.el (mime-display-image): Set default umask to 077.
	(mime-image-create): Use `nothing-image-instance-p'.

	* mime-pgp.el: When it is compiled, define `smime-output-buffer'
	and `smime-errors-buffer' to avoid compiler warning.

	* mime-edit.el: Ditto.

	* mime-pgp.el
	(mime-view-application/pkcs7-mime): Regard smime-type as
	"enveloped-data" unless it is specified.

	* smime.el (smime-directory-files): Abolish.
	(smime-verify-region): Abolish local variable `args'.
